# mikros-rs

./: .gitignore  Cargo.toml  LICENSE  README.md
docs/: mikros.md  service_grpc.md  service_native.md  service_script.md
docs/mikros/: mikros.md  service_grpc.md  service_http.md  service_native.md  service_script.md
examples/: README.md
examples/apps/: Cargo.toml
examples/apps/cronjob_service/: Cargo.toml  service.toml
examples/apps/cronjob_service/src/: main.rs
examples/apps/grpc/: Cargo.toml  service.toml
examples/apps/grpc/src/: main.rs  service.rs
examples/apps/grpc_with_lifecycle/: Cargo.toml
examples/apps/grpc_with_lifecycle/src/: main.rs
examples/apps/http/: Cargo.toml
examples/apps/http/src/: main.rs
examples/apps/http_with_lifecycle/: Cargo.toml
examples/apps/http_with_lifecycle/src/: main.rs
examples/apps/http_with_lifecycle_and_state/: Cargo.toml
examples/apps/http_with_lifecycle_and_state/src/: main.rs
examples/apps/http_with_protobuf/: Cargo.toml  build.rs  protoc-gen-mikros-extensions.toml  service.toml
examples/apps/http_with_protobuf/proto/: card.proto
examples/apps/http_with_protobuf/src/: main.rs
examples/apps/http_with_protobuf/src/api/: router.rs
examples/apps/http_with_state/: Cargo.toml
examples/apps/http_with_state/src/: main.rs
examples/apps/native/: Cargo.toml  service.toml
examples/apps/native/src/: main.rs  service.rs
examples/apps/script/: Cargo.toml  service.toml
examples/apps/script/src/: main.rs  service.rs
examples/features/: Cargo.toml
examples/features/example/: Cargo.toml
examples/features/example/src/: lib.rs
examples/features/simple_api/: Cargo.toml
examples/features/simple_api/src/: lib.rs
examples/native/: Cargo.toml  service.toml
examples/native/src/: main.rs  service.rs
examples/services/cronjob/: Cargo.toml
examples/services/cronjob/src/: builder.rs  lib.rs
examples/services/grpc/: Cargo.toml  build.rs
examples/services/grpc/proto/: helloworld.proto
examples/services/grpc/src/: client.rs  main.rs  server.rs
examples/services/http/: Cargo.toml
examples/services/http/src/: main.rs
examples/services/http_with_lifecycle/: service.toml
examples/services/http_with_lifecycle/src/: main.rs
examples/services/http_with_lifecycle_and_state/: Cargo.toml
examples/services/http_with_lifecycle_and_state/src/: main.rs
examples/services/http_with_state/src/: main.rs
examples/services/native/: Cargo.toml  service.toml
examples/services/native/src/: main.rs  service.rs
examples/services/script/: service.toml
mikros/: Cargo.toml
mikros-macros/: Cargo.toml
mikros-macros/src/: env.rs  lib.rs  lifecycle.rs
mikros-macros/src/env/: parser.rs
mikros-tests/: Cargo.toml
mikros-tests/src/: common.rs  env.rs  lib.rs  macros.rs
mikros-tests/src/macros/: env.rs  lifecycle.rs
mikros/resources/test/definitions/: service.toml.ok_clients  service.toml.ok_custom_settings
mikros/src/: args.rs  definition.rs  env.rs  errors.rs  grpc.rs  http.rs  lib.rs  logger.rs  service.rs
mikros/src/definition/: errors.rs  name.rs  service.rs  validation.rs
mikros/src/env/: errors.rs
mikros/src/errors/: macros.rs
mikros/src/http/: header.rs
mikros/src/logger/: builder.rs  middleware.rs
mikros/src/plugin/: feature.rs  service.rs
mikros/src/service/: builder.rs  context.rs  errors.rs  grpc.rs  http.rs  native.rs  script.rs
mikros/src/service/http/: health.rs
resources/test/definitions/: service.toml.err_invalid_toml  service.toml.err_unsupported_type  service.toml.ok  service.toml.ok_cronjob  service.toml.ok_hybrid
src/: definition.rs  env.rs  errors.rs  http.rs  lib.rs  logger.rs  plugin.rs  service.rs
src/args/: mod.rs
src/definition/: errors.rs  mod.rs  service.rs  validation.rs
src/env/: errors.rs  mod.rs
src/errors/: macros.rs  mod.rs
src/features/: mod.rs
src/features/example/: mod.rs
src/grpc/: mod.rs
src/http/: header.rs  mod.rs
src/logger/: builder.rs  middleware.rs  mod.rs
src/plugin/: feature.rs  mod.rs  service.rs
src/service/: builder.rs  context.rs  errors.rs  grpc.rs  http.rs  lifecycle.rs  mod.rs  native.rs  script.rs
src/service/grpc/: errors.rs  mod.rs
src/service/http/: errors.rs  health.rs  mod.rs
src/service/native/: mod.rs
src/service/script/: mod.rs
tests/macros/: env.rs
