[workspace]
resolver = "2"
members = [
    "mikros",
]

[workspace.package]
edition = "2021"
authors = ["Rodrigo Freitas <rsfreitas@users.noreply.github.com>"]
description = "An optionated crate to help building multi-purpose applications."
readme = "README.md"
license = "MIT"
repository = "https://github.com/mikros-dev/mikros-rs"
keywords = [
    "microservices",
    "frameworks",
    "grpc",
    "http"
]

categories = [
    "web-programming"
]
