[package]
name = "mikros-tests"
version = "0.1.0"
publish = false

edition.workspace = true
authors.workspace = true
description.workspace = true
readme.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
mikros = {path = "../mikros"}
mikros-macros = { path = "../mikros-macros"}
