[package]
name = "mikros"
version = "0.1.0"

edition.workspace = true
authors.workspace = true
description.workspace = true
readme.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
async-trait = "0.1.86"
axum = "0.8.1"
chrono = "0.4.40"
futures = "0.3.31"
http = "1.2.0"
indexmap = { version = "2.7.1", features = ["serde"]}
mikros-macros = { version = "0.1.0" }
prost = "0.13.5"
serde = "1.0.218"
serde_derive = "1.0.217"
serde_json = "1.0.139"
tokio = { version = "1.43.0", features = ["rt-multi-thread", "sync", "signal", "macros"] }
toml = "0.8.20"
tonic = { version = "0.12.3", features = ["transport"]}
tower = "0.5.2"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
validator = { version = "0.20.0", features = ["derive"] }

[dev-dependencies]
mikros-tests = { workspace = true }
