[package]
name = "grpc"
version = "0.1.0"
edition = "2021"

[dependencies]
example = { path = "../../features/example" }
mikros = { path = "../../../mikros" }

# Dependencies required because we're building the proto using tonic_build.
prost = "0.13.3"
tonic = "0.12.3"

[build-dependencies]
tonic-build = "0.12.3"
