[package]
name = "http_with_protobuf"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.39"
mikros = { path = "../../../mikros" }
prost-wkt = "0.6.0"
prost-wkt-types = "0.6.0"
uuid = {version = "1.11.0", features = ["serde", "v4"]}

prost = "0.13.3"
tonic = "0.12.3"

[build-dependencies]
tonic-build = "0.12.3"
